# Double-linked-lists-

./: AddPosition.h  BackPack.cpp  BackPack.h  CMakeLists.txt  LinkedDouble.cpp  LinkedDouble.h  LinkedListDouble.cpp  LinkedListDouble.h  ListHandler.cpp  ListHandler.h  ListValidator.cpp  ListValidator.h  MessageException.h  Node.cpp  Node.h  README.md  Type.h  main.cpp
